# personal-finance-app

./: .gitignore  docker-compose.yml  expenditures.hyper  test_extract.hyper
backend/: Dockerfile  auth.py  database.py  init_db.py  main.py  models.py  pyproject.toml  schemas.py  setup_database.py
backend/etl/: generate_data.py  main.py  tableau_manager.py
database/: init.sql
etl/: main.py  pyproject.toml  tableau_manager.py
frontend/: 1_Tracker_&_Dashboard.py  Dockerfile  Home.py  app.py  pyproject.toml
frontend/pages/: 1_Tracker.py  2_Analytics.py  2_Manage_Settings_.py  3_Manage_Settings_.py
