[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Felipe Sebben <felipesebben@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.50.0"
requests = "^2.32.5"
pandas = "^2.3.3"
tzdata = "^2025.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
